.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Project__c.object
<CustomObject>
    <description>A test project is a collection of test plans, cases and their execution results.</description>
    <fields>
        <fullName>provar__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An archived project is hidden from Project Lookups in Provar Manager</description>
        <inlineHelpText>Check to hide this project from selection in Provar Manager planning and execution.</inlineHelpText>
        <label>Archived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <description>A summary description about the project it&apos;s aims and major deliverables. This helps users understand which projects they should be working with</description>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__End_Date__c</fullName>
        <description>The planned end date for this project. Like Start Date this can be used to filter dashboards and reports accordingly</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to match test projects from other platforms.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Project_Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>2 to 7 characters-long unique identifier for the project. It CAN NOT be changed afterwards.</inlineHelpText>
        <label>Project Key</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Secrets_Password__c</fullName>
        <inlineHelpText>Required if you want to use this project with Provar Grid.</inlineHelpText>
        <label>Secrets Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>provar__Start_Date__c</fullName>
        <description>Project Start Date can be used to filter dashboards and reports for cross project reporting</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Test Project</label>
    <listViews>
        <fullName>provar__Active_Projects</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__Start_Date__c</columns>
        <columns>provar__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Archived__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>provar__Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>provar__End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>provar__End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__Start_Date__c</columns>
        <columns>provar__End_Date__c</columns>
        <columns>provar__Archived__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>provar__Archived_Projects</fullName>
        <columns>NAME</columns>
        <columns>provar__Description__c</columns>
        <columns>provar__Start_Date__c</columns>
        <columns>provar__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Archived__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Archived Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>provar__Project_Key_Cannot_Be_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( provar__Project_Key__c )</errorConditionFormula>
        <errorDisplayField>provar__Project_Key__c</errorDisplayField>
        <errorMessage>The project key cannot be changed once the project has been created.</errorMessage>
    </validationRules>
</CustomObject>